Fix some image/video scroll jumps

--- a/res/css/views/messages/_MVideoBody.scss
+++ b/res/css/views/messages/_MVideoBody.scss
@@ -15,7 +15,13 @@ limitations under the License.
 */
 
 span.mx_MVideoBody {
-    video.mx_MVideoBody {
+    .mx_MVideoBody_container {
         border-radius: $timeline-image-border-radius;
+        overflow: hidden;
+
+        video {
+            height: 100%;
+            width: 100%;
+        }
     }
 }
